k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getsale-v2
  labels:
    app.kubernetes.io/part-of: getsale
